fix a bug where random overflow happened (scrollbar appearance)

--- a/css/style.css
+++ b/css/style.css
@@ -437,6 +437,9 @@ body {
       width: 100%;
       height: 100%;
       transform: rotateY(180deg); }
+      .forecast__container-card_back svg {
+        height: 7rem;
+        width: 7rem; }
     .forecast__container-card--header {
       position: relative;
       padding: 1.2rem 2rem;
@@ -454,7 +457,7 @@ body {
         background-color: #242426;
         border-radius: 100px; }
     .forecast__container-card--main {
-      padding: 0.5rem 2rem; }
+      padding: 0.5rem 0; }
       .forecast__container-card--main > :first-child {
         margin: 0.5rem auto 0 auto;
         display: flex;
