--- a/sass/components/_forecast-container--cards.scss
+++ b/sass/components/_forecast-container--cards.scss
@@ -27,6 +27,10 @@
         width: 100%;
         height: 100%;
         transform: rotateY(180deg);
+        & svg {
+          height: 7rem;
+          width: 7rem;
+        }
       }
 
       //header of the card elements
@@ -51,7 +55,7 @@
         }
       }
       &--main {
-        padding: 0.5rem 2rem;
+        padding: 0.5rem 0;
         //CENTER ELEMENT (for example: svg icon)
         & > :first-child {
           margin: 0.5rem auto 0 auto;
